<resources>
    <string name="app_name">Geofort</string>
    <string name="hint_geofortTitle">Geofort Title</string>
    <string name="hint_geofortDescription">Description </string>
    <string name="button_addGeofort">Add Geofort</string>
    <string name="button_saveGeofort">Save Geofort</string>
    <string name="menu_addGeofort">Add</string>
    <string name="menu_cancelGeofort">Cancel</string>
    <string name="add_emptyGeofort">Please Enter a title</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_changeImage"> Add More Images </string>
    <string name="select_geofort_image">Select geofort image</string>
    <string name="imageView">The Geofort Image</string>
    <string name="button_location">Set Location </string>
    <string name="button_delete">Delete Geofort</string>

    <string name="change_location">Change Location</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_geofort_activity_map">All Forts</string>


    <string name="title_icon_delete">Delete</string>
    <string name="title_icon_settings">Settings</string>
    <string name="title_icon_back">Back</string>
    <string name="title_icon_logout">Logout</string>
    <string name="title_save">Save</string>
    <string name="button_addNote"> Add Note </string>
    <string name="hint_note">Add notes here</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="title_activity_change_email">Change Email</string>







</resources>
