<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="View all map"
        app:showAsAction="always"/>
    <item
        android:drawable="@drawable/white"
        android:id="@+id/Add"
        android:title="@string/menu_addGeofort"
        app:showAsAction="always"/>
    <item
        android:drawable="@drawable/white"
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelGeofort"
        app:showAsAction="always"/>

    <item android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/title_icon_delete"
        app:showAsAction="ifRoom"/>
</menu>